--- a/src/modules/contact/contact.module.scss
+++ b/src/modules/contact/contact.module.scss
@@ -1,6 +1,8 @@
 @import '../../common/sass/global.scss';
 
 .contactForm {
+    margin-top: 50px;
+
     input, textarea {
         width: 100%;
     }
@@ -16,6 +18,10 @@
     // margin-top: 40px;
     // padding-top: 60px;
     padding-top: 170px;
+
+    @include respond(phone) {
+        padding-top: 120px;
+    }
 
     background: url('../../../public/img/gradient5.png');
     background-repeat: no-repeat;
