--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -5,25 +5,30 @@
     width: 100%;
     // min-height: 50vh;
     padding-top: 25vh;
-    // margin-bottom: 10vh;
+    margin-bottom: 15vh;
     // z-index: -1;
+    // min-height: calc(100vh - 15rem);
 
     @include respond(tab-port) {
         padding-top: 20vh;
+        // min-height: calc(80vh - 15rem);
     }
 
     @media screen and (max-width: 30em) {
         padding-top: 10rem;
+        min-height: calc(100vh - 10rem);
+        overflow: hidden;
+        margin-bottom: 5vh;
     }
 
     &__bg {
-        position: absolute;
-        top: 0; height: 100vh; right: 0; left: 0;
-        background: url('../../public/img/header-gradient.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: bottom;
-        opacity: 0.1;
+        // position: absolute;
+        // top: 0; height: 100vh; right: 0; left: 0;
+        // background: url('../../public/img/header-gradient.png');
+        // background-repeat: no-repeat;
+        // background-size: cover;
+        // background-position: bottom;
+        // opacity: 0.1;
     }
 
     :global(.container) {
@@ -38,6 +43,7 @@
 
         @include respond(tab-port) {
             bottom: 0;
+            left: 5%;
         }
 
         @media screen and (max-width: 43.75em) {
@@ -75,6 +81,7 @@
 
         @include respond(tab-port) {
             bottom: 2%;
+            right: 5%;
         }
 
         @media screen and (max-width: 43.75em) {
